[gd_scene load_steps=14 format=3 uid="uid://b1t0d7fsy6bix"]

[ext_resource type="Script" path="res://Assets/Entities/Player/player.gd" id="1_s4w7m"]
[ext_resource type="Script" path="res://Assets/Entities/Player/state_machine.gd" id="2_eptjr"]
[ext_resource type="Script" path="res://Assets/Entities/Player/human_idle.gd" id="3_lc4jw"]
[ext_resource type="Script" path="res://Assets/Entities/Player/human_movement.gd" id="3_rusd6"]
[ext_resource type="Script" path="res://Assets/Entities/Player/human_jump.gd" id="4_h3o5n"]
[ext_resource type="Script" path="res://Assets/Entities/Player/human_crouch.gd" id="5_cjc2m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yjauy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s1lhu"]
albedo_color = Color(0.756863, 0, 0.317647, 1)
metallic = 0.09
emission = Color(0.631031, 0.198114, 0.630244, 1)
emission_energy_multiplier = 3.99

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1c8e6"]
material = SubResource("StandardMaterial3D_s1lhu")

[sub_resource type="Animation" id="Animation_dosg1"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraControler:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3qcm4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraControler:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iqjwb"]
_data = {
"Crouch": SubResource("Animation_dosg1"),
"RESET": SubResource("Animation_3qcm4")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_5olwx"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLER", "ANIMATION_PLAYER", "CROUCH_SHAPECAST")]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_s4w7m")
MOUSE_SENSITIVITY = 0.2
CAMERA_CONTROLER = NodePath("CameraControler/Camera3D")
ANIMATION_PLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("ShapeCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_yjauy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_1c8e6")

[node name="CameraControler" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="CameraControler"]

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraControler/Camera3D"]
update_mode = 1

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_eptjr")
initial_state = NodePath("HumanIdle")

[node name="HumanIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_lc4jw")
player = NodePath("../..")

[node name="HumanWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_rusd6")
player = NodePath("../..")

[node name="HumanJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_h3o5n")
player = NodePath("../..")

[node name="HumanCrouch" type="Node" parent="StateMachine"]
script = ExtResource("5_cjc2m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iqjwb")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_5olwx")
target_position = Vector3(0, 1.5, 0)
debug_shape_custom_color = Color(0, 0.520508, 0.110723, 1)

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
